# reclaim-mcp-server

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  SESSION-START-PROMPT.md  pyproject.toml  server.json  smithery.yaml
.gitlab/: CODEOWNERS
.gitlab/duo/: agent-config.yml  chat-rules.md  mr-review-instructions.yaml
.gitlab/issue_templates/: Bug.md  Default.md  Feature.md
.gitlab/merge_request_templates/: Default.md
docs/: API-research.md  API.md  PLAN.md  TOOLS.md  best_practices_developing_MCP_servers_fastmcp.md  build-spec.md  reclaim-api-0.1.yml  research.md  v0.8.0-plan.md
src/reclaim_mcp/: __init__.py  cache.py  client.py  config.py  exceptions.py  models.py  profiles.py  server.py  utils.py
src/reclaim_mcp/tools/: __init__.py  analytics.py  events.py  focus.py  habits.py  moments.py  scheduling.py  tasks.py
tests/: __init__.py  conftest.py  test_cache.py  test_client.py  test_events.py  test_habits.py  test_models.py  test_moments.py  test_profiles.py  test_scheduling.py  test_server.py  test_tasks.py
